--- a/Hometask 21/Hometask 21.csproj
+++ b/Hometask 21/Hometask 21.csproj
@@ -8,4 +8,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+	<PackageReference Include="Microsoft.TestPlatform.TestHost" Version="16.2.0" />
+  </ItemGroup>
+
 </Project>
